objects/Configuration__c.object
<CustomObject>
    <description>An object to store the configurations for different projects. The fields created for this object can be shared among different projects. The name of the record defines the project for which configurations are defined.</description>
    <fields>
        <fullName>CaseOwner__c</fullName>
        <description>The default owner id for the case.</description>
        <label>Case Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityAccountOwner__c</fullName>
        <description>The default owner of the accounts which are created for community users.</description>
        <label>Community Account Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultTaskOwner__c</fullName>
        <description>Default owner of the task when it gets created</description>
        <label>Default Task Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC2ServerPath__c</fullName>
        <description>The path of the EC2 server.</description>
        <inlineHelpText>The path of the EC2 server.</inlineHelpText>
        <label>EC2 Server Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromEmailAddress__c</fullName>
        <description>The sender of the emails going out for this project. This value will be populated as the sender of the emails.</description>
        <inlineHelpText>The sender of the emails going out for this project. This value will be populated as the sender of the emails.</inlineHelpText>
        <label>From Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfDaysToExpire__c</fullName>
        <description>The number of days before an case gets expired.</description>
        <inlineHelpText>The number of days before an item gets expired.</inlineHelpText>
        <label>Number Of Days To Expire</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>The encrypted field contains the password part of the credentials. The field is encrypted to ensure security of credentials.</description>
        <inlineHelpText>The encrypted field contains the password part of the credentials. The field is encrypted to ensure security of credentials.</inlineHelpText>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ProfileId1__c</fullName>
        <description>The profile id placeholder which can be used to refer to specific profiles</description>
        <label>Profile Id 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileId2__c</fullName>
        <description>The profile id placeholder which can be used to refer to specific profiles</description>
        <label>Profile Id 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3BucketName__c</fullName>
        <description>The bucket name in S3 where the files will be uploaded to.</description>
        <inlineHelpText>The bucket name in S3 where the files will be uploaded to.</inlineHelpText>
        <label>S3 Bucket Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3EncryptionScheme__c</fullName>
        <description>The S3 encryption scheme for pre-signed urls.</description>
        <inlineHelpText>The S3 encryption scheme for pre-signed urls.</inlineHelpText>
        <label>S3 Encryption Scheme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3HeaderEncryptionScheme__c</fullName>
        <description>The S3 header encryption scheme for pre-signed urls.</description>
        <inlineHelpText>The S3 header encryption scheme for pre-signed urls.</inlineHelpText>
        <label>S3 Header Encryption Scheme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3Host__c</fullName>
        <description>The S3 Host value for S3 uploads.</description>
        <inlineHelpText>The S3 Host value for S3 uploads.</inlineHelpText>
        <label>S3 Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3Region__c</fullName>
        <description>The S3 Region for pre-signed urls.</description>
        <inlineHelpText>The S3 Region for pre-signed urls.</inlineHelpText>
        <label>S3 Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3ServerSideEncryptionAlgorithm__c</fullName>
        <description>The S3 server side encryption algorithm value.</description>
        <inlineHelpText>The S3 server side encryption algorithm value.</inlineHelpText>
        <label>S3 Server Side Encryption Algorithm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3Timeout__c</fullName>
        <description>The S3 timeout for pre-signed urls.</description>
        <inlineHelpText>The S3 timeout for pre-signed urls.</inlineHelpText>
        <label>S3 Timeout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteId1__c</fullName>
        <description>Id of a site used for community. There could be more than 1 communities for a project. New fields with increasing order should be created for the each new community for a project.</description>
        <label>Site Id 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteId2__c</fullName>
        <description>Id of a site used for community. There could be more than 1 communities for a project. New fields with increasing order should be created for the each new community for a project.</description>
        <label>Site Id 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>The encrypted field contains the username part of the credentials. The field is encrypted to ensure security of credentials.</description>
        <inlineHelpText>The encrypted field contains the username part of the credentials. The field is encrypted to ensure security of credentials.</inlineHelpText>
        <label>Username</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>